--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,9 +2,27 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="login.css" />
+		<link rel="stylesheet" href="main.css">
 		<title>Sign in</title>
 	</head>
 	<body>
+	<div class="header">
+        <div class="container">
+            <div class="navbar">
+                <div class="inner_header">
+                    <h1>Phone Shop</h1>
+                </div>
+                <nav>
+                    <ul class="menu">
+						<li><a class="btn"  href="index.html">Main</a></li>
+                        <li><a class="btn"  href="catalog.html">Catalog</a></li>
+                        <li><a class="btn" href="login.html">Authorization</a></li>
+						<li><a class="btn" href="registration.html">Registration</a></li>
+                        </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
 	<div class="form_auth_block">
 	  <div class="form_auth_block_content">
 		<p class="form_auth_block_head_text">Sign in</p>
@@ -21,6 +39,7 @@
 	  </div>
 	  
 	</div>
+	<script src="/js/jquery.min.js"></script>
 	</body>
 </html>
 
