--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,9 +2,27 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="registration.css" />
+		<link rel="stylesheet" href="main.css">
 		<title>Registration</title>
 	</head>
 	<body>
+	<div class="header">
+        <div class="container">
+            <div class="navbar">
+                <div class="inner_header">
+                    <h1>Phone Shop</h1>
+                </div>
+                <nav>
+                    <ul class="menu">
+						<li><a class="btn"  href="index.html">Main</a></li>
+                        <li><a class="btn"  href="catalog.html">Catalog</a></li>
+                        <li><a class="btn" href="login.html">Authorization</a></li>
+						<li><a class="btn" href="registration.html">Registration</a></li>
+                        </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
 	<div class="form_auth_block">
 	  <div class="form_auth_block_content">
 		<p class="form_auth_block_head_text">Registration</p>
@@ -24,7 +42,6 @@
 		  <button class="form_auth_button" type="submit" name="form_auth_submit">Create account</button>
 		</form>
 	  </div>
-	  
 	</div>
 	</body>
 </html>
