--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Online Shop</title>
+        <title>Online Market</title>
         <link rel="stylesheet" href="main.css">
-       </head>
+        </head>
     <body>
 
 
@@ -23,60 +23,31 @@
                         </ul>
                 </nav>
             </div>
-
-            <div class="row">
-                <div class="col_1">
-                    <h1>Find your smartphone here!</h1>
-                    <p>New IPhone<span style="font-size: 10px;">&#169</span> 12, 12 Pro and Pro Max
-                        are avaliable in various colors!
-                    </p>
-                    <a href="catalog.html" class="btn">Explore Now!</a>
-                </div>
-
-            </div>
-        </div>
-    </div>
-        
-    <!----- part with examples ----->
-    <div class="categories">
-        <div class="small_container">
-            <div class="row">
-                <div class="col_3">
-                    <img src="images/item_1.png">
-                </div>
-                <div class="col_3">
-                    <img src="images/item_2.png">
-                </div>
-                <div class="col_3">
-                    <img src="images/item_3.png">
-                </div>
-            </div>
         </div>
     </div>
 
-    <!----- part with popular products ----->
+    <!----- part with all products ----->
 
     <div class="small_container">
-        <h2 class="title_popular">Popular Products</h2>
+        <h2 class="title_popular">All Products</h2>
         <div class="row">
-            <div class="col_4">
+            <div class="col_4" onclick="document.location='items/item1.html'">
                 <img src="images/item.jpg">
                 <h4>Item 1</h4>
                 <p>$100.00</p>
             </div>
-            <div class="col_4">
+            <div class="col_4" onclick="document.location='items/item2.html'">
                 <img src="images/item.jpg">
                 <h4>Item 2</h4>
                 <p>$200.00</p>
             </div>
-            <div class="col_4">
+            <div class="col_4" onclick="document.location='items/item3.html'">
                 <img src="images/item.jpg">
                 <h4>Item 3</h4>         
                 <p>$20.00</p>
             </div>
         </div>
 
-        <h2 class="title_popular">Latests Products</h2>
         <div class="row">
             <div class="col_4">
                 <img src="images/item.jpg">
@@ -95,8 +66,23 @@
             </div>
         </div>
 
-
-
+        <div class="row">
+            <div class="col_4">
+                <img src="images/item.jpg">
+                <h4>Item 7</h4>
+                <p>$225.00</p>
+            </div>
+            <div class="col_4">
+                <img src="images/item.jpg">
+                <h4>Item 8</h4>
+                <p>$10.00</p>
+            </div>
+            <div class="col_4">
+                <img src="images/item.jpg">
+                <h4>Item 9</h4>
+                <p>$176.00</p>
+            </div>
+        </div>
     </div>
     </body>
 </html>
