--- a/src/main/resources/templates/registration.css
+++ b/src/main/resources/templates/registration.css
@@ -2,7 +2,7 @@
     width: 500px;
     height: 750px;
     margin: 0 auto;
-    background: #F8F8FF;
+    background: #F5F5F5;
     background-size: cover;
     border-radius: 4px;
 	border: 2px solid black;
@@ -10,6 +10,9 @@
 	
 }
 .form_auth_block_content{
+}
+body{
+	background: url(images/ap.png) no-repeat;
 }
 .form_auth_block_head_text{
     display: block;
